--- a/v3/index.html
+++ b/v3/index.html
@@ -267,7 +267,7 @@
 				</nav>
 					<div class="alert alert-info" role="alert" style="margin-top:10px;">
 						<button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-						<span class="glyphicon glyphicon-info-sign"></span> <strong>Alpha release.</strong> You are using a preview release of this editor. Please be aware that you may encounter some issues.
+						<span class="glyphicon glyphicon-info-sign"></span> <strong>Alpha release (v3.0b).</strong> You are using a preview release of this editor. Please be aware that you may encounter some issues.
 					</div>
 				<div class="caption-container">
 					<div class="input-group" style="max-width:400px">
