--- a/index.html
+++ b/index.html
@@ -36,6 +36,12 @@
 
 		<div id="left-panel">
 			<div>
+
+				<div class="alert alert-info" role="alert" style="margin:3px;">
+					<button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+					<span class="glyphicon glyphicon-info-sign"></span> <strong>New tool!</strong> Check out our new tool: <strong><a href="https://www.sochronos.com" target="_blank">Sochronos</a></strong>, a free online timeline editor. No registration required.
+				</div>
+
 				<div class="alert alert-info return-to-desktop" role="alert" style="margin:3px;">
 					<button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
 					<span class="glyphicon glyphicon-info-sign"></span> <strong>Mobile.</strong> You are using a mobile rendering of our LaTeX table editor. <a href="#" onclick="table.requestDesktopSite()">Request desktop site for this session</a>.
